--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Slidetagram. Create a l;ve slideshow with instagram photos</title>
+		<title>Slidetagram. Create a live slideshow with instagram photos</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="css/jumbotron-narrow.css" rel="stylesheet">
@@ -24,9 +24,9 @@
 
 			<div class="jumbotron">
 				<h1>Slidetagram</h1>
-				<p class="lead">Create a live slideshow from instagram photos based in tags.</p>
+				<p class="lead">Create a live slideshow from Instagram photos based in #hashtags.</p>
 				<p class="lead">In just a few seconds!</p>
-				<p><a class="btn btn-lg btn-success" href="#" role="button">Sign up with Instagram account</a></p>
+				<p><button class="btn btn-lg btn-success"><img src="img/instagram-icon.png" /> Sign up with Instagram account</button></p>
 			</div>
 
 
