--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<h1>Slidetagram</h1>
 				<p class="lead">Create a live slideshow from Instagram photos based in #hashtags.</p>
 				<p class="lead">In just a few seconds!</p>
-				<p><a href="https://instagram.com/oauth/authorize/?client_id={your client id here}=&redirect_uri=http://slidetagram.com/oauth&response_type=token" class="btn btn-lg btn-success"><img src="img/instagram-icon.png" /> Sign up with Instagram account</a></p>
+				<p><a href="https://instagram.com/oauth/authorize/?client_id=5b1bc55fb9c94926858a73a6eef0dfac&redirect_uri=http://slidetagram.com/oauth&response_type=token" class="btn btn-lg btn-success"><img src="img/instagram-icon.png" /> Sign up with Instagram account</a></p>
 			</div>
 
 
