--- a/slide/index.html
+++ b/slide/index.html
@@ -3,8 +3,8 @@
         <head>
                 <title>Slidetagram. Create a live slideshow with instagram photos</title>
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-                <link href="css/jumbotron-narrow.css" rel="stylesheet">
+                <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
+                <link href="../css/jumbotron-narrow.css" rel="stylesheet">
                 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
                 <!--[if lt IE 9]>
                         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -44,6 +44,6 @@
 
                 </div> <!-- /container -->
                 <script src="http://code.jquery.com/jquery.js"></script>
-                <script src="js/bootstrap.min.js"></script>
+                <script src="../js/bootstrap.min.js"></script>
         </body>
 </html>
