--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
 		</div> <!-- /container -->
 		<script src="http://code.jquery.com/jquery.js"></script>
 		<script src="js/bootstrap.min.js"></script>
+		<a href="https://github.com/achvaicer/slidetagram" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
 	</body>
 </html>
