fixed fullscreen background.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="css/jumbotron-narrow.css" rel="stylesheet">
+		<link rel="shortcut icon" href="favicon.ico" >
+		<link rel="icon" type="image/gif" href="animated_favicon1.gif" >
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
