--- a/contact/index.html
+++ b/contact/index.html
@@ -27,7 +27,8 @@
                         <div class="header">
                                 <ul class="nav nav-pills pull-right">
                                         <li class="active"><a href="../">Home</a></li>
-                                        <li><a href="../about/">About</a></li>
+                                        <li><a href="../about">About</a></li>
+                                        <li><a href="../contact">Contact</a></li>
                                 </ul>
                                 <h3 class="text-muted">Slidetagram</h3>
                         </div>
