added facebook and twitter buttons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 		<![endif]-->
 	</head>
 	<body>
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=614265591972576";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
+
 		<div class="container">
 			<div class="header">
 				<ul class="nav nav-pills pull-right">
@@ -30,6 +39,10 @@
 				<p><a href="https://instagram.com/oauth/authorize/?client_id={your client id here}=&redirect_uri=http://slidetagram.com/slide&response_type=token" class="btn btn-lg btn-success"><img src="img/instagram-icon.png" /> Sign up with Instagram account</a></p>
 			</div>
 
+			<div class="fb-like" data-href="http://slidetagram.com/" data-layout="box_count" data-action="like" data-show-faces="false" data-share="true"></div>
+
+			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://slidetagram.com/" data-size="large">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 			<div class="footer">
 				<p>&copy; Slidetagram 2013</p>
