added meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
 	<head>
 		<title>Slidetagram. Create a live slideshow with instagram photos</title>
+		<meta name="keywords" content="live, slideshow, instagram, hashtag, hashtags"/>
+		<meta name="description" content="Create a live slideshow with instagram photos by hashtags"/>
+		<meta name="subject" content="Create a live slideshow with instagram photos by hashtags">
+		<meta name="copyright"content="Slidetagram">
+		<meta name="language" content="EN">
+		<meta name="robots" content="index, follow" />
+		<meta name="author" content="Alberto Chvaicer">
+		<meta name="owner" content="Alberto Chvaicer">
+		<meta name="url" content="http://www.slidetagram.com">
+		<meta name="identifier-URL" content="http://www.slidetagram.com">
+		<meta name="coverage" content="Worldwide">
+		<meta name="distribution" content="Global">
+		<meta name="rating" content="General">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="css/jumbotron-narrow.css" rel="stylesheet">
