added strong tag

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 			<div class="jumbotron">
 				<h1>Slidetagram</h1>
-				<p class="lead">Create a live slideshow from Instagram photos based in #hashtags.</p>
+				<p class="lead"><strong>Create a live slideshow from Instagram photos based in #hashtags.</strong></p>
 				<p class="lead">In just a few seconds!</p>
 				<p><a href="https://instagram.com/oauth/authorize/?client_id={your client id here}=&redirect_uri=http://slidetagram.com/slide&response_type=token" class="btn btn-lg btn-success"><img src="img/instagram-icon.png" /> Sign up with Instagram account</a></p>
 			</div>
