--- a/slide/index.html
+++ b/slide/index.html
@@ -36,14 +36,39 @@
                                 <h1>Welcome!</h1>
                                 <p class="lead">Now you can create your custom live slide show!</p>
                                 <p class="lead">Choose your <input type="text" placeholder="#hashtag" id="search_tag" /> and <button id="go" class="btn btn-success">go!</button></p>
+				<p class="lead pull-right"><button id="advanced-button" type="button" class="btn btn-xs"><i class="icon-cog"></i>advanced options</button></p>
+				<br />
                         </div>
 
-			
+			<div id="advanced-options" class="well" style="display:none">
+				<form class="form-horizontal">
+					<fieldset>
+                                        <div class="checkbox">
+                                                <label>
+                                                        <input type="checkbox" data-bind="checked: showUserAndCaptions"> Show author and caption of the photo
+                                                <label>
+                                        </div>
+					<div class="checkbox">
+						<label>
+							<input type="checkbox"> Show other users comments
+						</label>
+					</div>
+					<div class="form-group">
+						<label for="textArea" class="col-lg-2 control-label">Instruction text</label>
+						<div class="col-lg-10">
+							<textarea class="form-control" rows="3" id="textArea" data-bind="instruction">Add the hashtag {{#hashtag}} into your Instagram photos</textarea>
+						</div>
+						<div class="help-block">Don't remove the {{#hashtag}} from the text</div>
+					</div>
+					</fieldset>
+				</form>
+                                </div>
+		
 			<div class="slideshow" style="display:none">
 				<div class="row">
 					<div class="span12">
 						<div class="panel panel-default">
-							<div class="panel-body" id="instruction">Add the hashtag <span id="searched_hashtag" class="text-success">#hashtag</span> into your Instagram photos</div>
+							<div class="panel-body" id="instruction" data-bind="fullInstruction"></div>
 						</div>
 					</div>
 				</div>
@@ -57,7 +82,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row" data-bind="visible: showUserAndCaptions">
 					<div class="span12">
 						<blockquote id="owner">
 							<p></p>
@@ -75,13 +100,14 @@
                 <script src="http://code.jquery.com/jquery.js"></script>
                 <script src="../js/bootstrap.min.js"></script>
 		<script src="../js/jquery.fullscreen-min.js"></script>
+		<script src="../js/knockout-3.0.0.js"></script>
 		<script language="javascript">
 			var items = [];
 			var interval = 0;
 			var min;
 
 			function showSlideShow() {
-				$(".header, .jumbotron").hide();
+				$(".header, .jumbotron, #advanced-options").hide();
 				$(".slideshow").show();
 			}
 			
@@ -145,8 +171,23 @@
 			$("#go").click(go);
 			$("#search_tag")
 				.focus(function() { var self = $(this); if (self.val() == "") self.val("#");  })
-				.blur(function() { var self = $(this); if (self.val() == "#") self.val("");})
-				.change(function() { var self = $(this); $("#searched_hashtag").text(self.val()); });
+				.blur(function() { var self = $(this); if (self.val() == "#") self.val("");});
+				//.change(function() { var self = $(this); $("#searched_hashtag").text(self.val()); });
+
+			$("#advanced-button").click(function() {
+				$("#advanced-options").toggle("slow");
+			});
+
+			var slideshowViewModel = function() {
+				self = this;
+				self.showUserAndCaptions = ko.observable(true);
+				self.showOtherUserComment = ko.observable(false);
+				self.instruction = ko.observable("Add the hashtag {{#hashtag}} into your Instagram photos");
+				self.hashtag = ko.observable("");
+				self.fullInstruction = ko.computed(function() { return self.instruction().replace("{{#hashtag}}", "<span class='text-success'>" + self.hashtag + "</span>");}, self);
+			};
+
+			ko.applyBindings(new slideshowViewModel());
 		</script>
         </body>
 </html>
