--- a/slide/index.html
+++ b/slide/index.html
@@ -23,7 +23,7 @@
 		</script>
         </head>
         <body>
-                <div class="container">
+                <div class="container" style="width: 970px !important">
                         <div class="header">
                                 <ul class="nav nav-pills pull-right">
                                         <li class="active"><a href="../">Home</a></li>
@@ -48,16 +48,16 @@
                                                         <input type="checkbox" data-bind="checked: showUserAndCaptions"> Show author and caption of the photo
                                                 <label>
                                         </div>
-					<div class="checkbox">
+					<!--<div class="checkbox">
 						<label>
-							<input type="checkbox"> Show other users comments
+							<input type="checkbox" data-bind="checked: showOtherUserComments"> Show other users comments
 						</label>
-					</div>
+					</div>-->
 					<div class="form-group">
 						<label for="textArea" class="col-lg-2 control-label">Instruction text</label>
 						<div class="col-lg-10">
 							<textarea class="form-control" rows="3" id="textArea" data-bind="value: instruction"></textarea>
-							<div class="help-block">Don't remove the {{#hashtag}} from the text</div>
+							<div class="help-block">Don't remove the <strong>{{#hashtag}}</strong> from the text</div>
 						</div>
 					</div>
 					</fieldset>
@@ -66,14 +66,14 @@
 		
 			<div class="slideshow" style="display:none">
 				<div class="row">
-					<div class="span12">
+					<div class="col-md-12">
 						<div class="panel panel-default">
 							<div class="panel-body" id="instruction" data-bind="html: fullInstruction"></div>
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="span12">
+					<div class="col-xs-122">
 						<div class="media incoming">
 							<img class="photo" style="display:none" />
 						</div>
@@ -81,12 +81,18 @@
 							<img class="photo" style="display:none" />
 						</div>
 					</div>
+					<div id="comments" class="col-xs-2" data-bind="visible: showOtherUserComments, foreach: comments">
+						<blockquote class="pull-right">
+							<p data-bind="text: text"></p>
+							<small data-bind="text: from.username"></small>
+						</blockquote>
+					</div>
 				</div>
 				<div class="row" data-bind="visible: showUserAndCaptions">
-					<div class="span12">
-						<blockquote id="owner">
-							<p></p>
-							<small></small>
+					<div class="col-md-12" data-bind="if: caption">
+						<blockquote id="owner" data-bind="with: caption">
+							<p data-bind="text: text"></p>
+							<span class="text-success" data-bind="text: from.username"></span>
 						</blockquote>
 					</div>
 				</div>
@@ -134,8 +140,8 @@
 			function showPhoto(data) {
 				$(".incoming .photo").attr("src", data.src).show();
 				switchMediaDivs();
-				$("#owner p").text((data.caption || {}).text);
-				$("#owner small").text((data.caption || {from:{}}).from.username);
+				vm.caption(data.caption);
+				vm.comments(data.comments);
 			}
 			
 			function switchMediaDivs() {0
@@ -146,7 +152,7 @@
 			}
 
 			function loadPhoto() {
-				var url = "https://api.instagram.com/v1/tags/" + $("#search_tag").val().replace("#","") + "/media/recent?access_token=" + token;
+				var url = "https://api.instagram.com/v1/tags/" + $("#search_tag").val().replace("#","").replace(" ", "") + "/media/recent?access_token=" + token;
 				console.log(url);
 				doAjax(url, function(json) {
 					var f = json.data || [];
@@ -181,13 +187,15 @@
 			var slideshowViewModel = function() {
 				self = this;
 				self.showUserAndCaptions = ko.observable(true);
-				self.showOtherUserComment = ko.observable(false);
+				self.showOtherUserComments = ko.observable(false);
 				self.instruction = ko.observable("Add the hashtag {{#hashtag}} into your Instagram photos");
 				self.hashtag = ko.observable("");
 				self.fullInstruction = ko.computed(function() { return self.instruction().replace("{{#hashtag}}", "<span class='text-success'>" + self.hashtag() + "</span>");}, self);
+				self.comments = ko.observableArray([{ text: "", from:{username:""}  }]);
+				self.caption = ko.observable({text:"", from:{username:"", profile_picture:""}});
 			};
-
-			ko.applyBindings(new slideshowViewModel());
+			var vm = new slideshowViewModel();
+			ko.applyBindings(vm);
 		</script>
         </body>
 </html>
