--- a/slide/index.html
+++ b/slide/index.html
@@ -5,7 +5,7 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
                 <link href="../css/jumbotron-narrow.css" rel="stylesheet">
-		<link href="../css/transitions.css" rel="styleshett">
+		<link href="../css/transitions.css" rel="stylesheet">
 		<link rel="shortcut icon" href="../favicon.ico" >
 		<link rel="icon" type="image/gif" href="../animated_favicon1.gif" >
                 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
