added verification code to google webmaster

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<meta name="distribution" content="Global">
 		<meta name="rating" content="General">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="google-site-verification" content="BYqVen-CZTvPseuqfSXtdSNvEh73hZKwuOavfw9zgSQ" />
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="css/jumbotron-narrow.css" rel="stylesheet">
 		<link rel="shortcut icon" href="favicon.ico" >
@@ -37,6 +38,7 @@
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		})();
 		</script>
+
 	</head>
 	<body>
 		<div id="fb-root"></div>
