changed personal site

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
                         </div>
 
 		<div class="jumbotron">
-				<p class="lead">Slidetagram was created by <a href="http://flavors.me/alberto">a developer</a> that just wanted his guests to interact with their pictures during his wedding.</p>
+				<p class="lead">Slidetagram was created by <a href="http://achvaicer.github.io">a developer</a> that just wanted his guests to interact with their pictures during his wedding.</p>
 				<p class="lead">The real time slideshow was so cool, that he created and <a href="https://github.com/achvaicer/slidetagram">open-sourced</a> the Slidetagram.</p>
 				<p class="lead">Now anyone could create their own real time slideshow based in Instagram #hashtags for their event.</p>
 			</div>
