--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								}
 					});
 
-				$("#year").text(new DateTime().getFullYear());
+				$("#year").text(new Date().getFullYear());
 		</script>
 		<script src="js/bootstrap.min.js"></script>
 		
