showing year in others pages

--- a/about/index.html
+++ b/about/index.html
@@ -32,8 +32,8 @@
 
 
 			<div class="footer">
-				<p>&copy; Slidetagram 2013</p>
-			</div>	
+                                <p>Made with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> in Rio de Janeiro &copy; Slidetagram <script>document.write(new Date().getFullYear())</script></p>
+                        </div>
                 </div> <!-- /container -->
                 <script src="http://code.jquery.com/jquery.js"></script>
                 <script src="../js/bootstrap.min.js"></script>
