--- a/slide/index.html
+++ b/slide/index.html
@@ -124,7 +124,7 @@
 
 			</div>
                         <div class="footer">
-                                <p>&copy; Slidetagram 2013</p>
+                                <p>Made with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> in Rio de Janeiro &copy; Slidetagram <script>document.write(new Date().getFullYear())</script></p>
                         </div>
 
                 </div> <!-- /container -->
