fix on oauth redirection

--- a/oauth/index.html
+++ b/oauth/index.html
@@ -8,7 +8,7 @@
 			var index = split.indexOf("access_token");
 			if (index == -1) window.location = "slidetagram.com";
 			var token = split[index+1];
-			window.location = "http://slidetagram.com/slide?access_token="+token;
+			window.location = "http://slidetagram.com/slide#access_token="+token;
 		</script>
 	</head>
 	<body>
