--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<p class="lead"><strong>Create a live slideshow from Instagram photos based in #hashtags.</strong></p>
 				<p class="lead">In just a few seconds!</p>
 				<p>
-						<a  id="login" href="https://instagram.com/oauth/authorize/?client_id=5b1bc55fb9c94926858a73a6eef0dfac&redirect_uri=http://slidetagram.com/slide&response_type=token" class="btn btn-lg btn-success">
+						<a  id="login" href="https://instagram.com/oauth/authorize/?client_id=5b1bc55fb9c94926858a73a6eef0dfac&redirect_uri=http://slidetagram.com/slide/&response_type=token" class="btn btn-lg btn-success">
 							<img src="img/instagram-icon.png" /> <span> Sign up with Instagram account</span>
 						</a>
 				</p>
