--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
 				<h3 class="text-muted">Slidetagram</h3>
 			</div>
 
+			<div class="alert alert-dismissible alert-danger">
+                <p><strong>We are very sorry for that :(</strong></p>
+				<p>
+				Since the last update of <a href="http://developers.instagram.com/post/133424514006/instagram-platform-update" target="_blank">Instagram terms</a>,
+				sites like Slidetagram are not abble anymore to search public content by hashtag without their approval.</p>
+				<p>
+					We are already trying to get this as soon as possible.
+				</p>
+            </div>
+			  
 			<div class="jumbotron">
 				<h1>Slidetagram</h1>
 				<p class="lead"><strong>Create a live slideshow from Instagram photos based in #hashtags.</strong></p>
