--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <p><strong>We are very sorry for that :(</strong></p>
 				<p>
 				Since the last update of <a href="http://developers.instagram.com/post/133424514006/instagram-platform-update" target="_blank">Instagram terms</a>,
-				sites like Slidetagram are not abble anymore to search public content by hashtag without their approval.</p>
+				sites like Slidetagram are not able anymore to search public content by hashtag without their approval.</p>
 				<p>
 					We are already trying to get this as soon as possible.
 				</p>
