changed from slidetagram to slidify

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
         <head>
-                <title>Slidetagram. Create a live slideshow with instagram photos</title>
+                <title>Slidify. Create a live slideshow with instagram photos</title>
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
                 <link href="../css/jumbotron-narrow.css" rel="stylesheet">
@@ -21,12 +21,12 @@
                                         <li><a href="../">Home</a></li>
                                         <li class="active"><a href="../about/">About</a></li>
                                 </ul>
-                                <h3 class="text-muted">Slidetagram</h3>
+                                <h3 class="text-muted">Slidify</h3>
                         </div>
 
 		<div class="jumbotron">
-				<p class="lead">Slidetagram was created by <a href="http://achvaicer.github.io">a developer</a> that just wanted his guests to interact with their pictures during his wedding.</p>
-				<p class="lead">The real time slideshow was so cool, that he created and <a href="https://github.com/achvaicer/slidetagram">open-sourced</a> the Slidetagram.</p>
+				<p class="lead">Slidify was created by <a href="http://achvaicer.github.io">a developer</a> that just wanted his guests to interact with their pictures during his wedding.</p>
+				<p class="lead">The real time slideshow was so cool, that he created and <a href="https://github.com/achvaicer/slidetagram">open-sourced</a> the <del>Slidetagram</del> Slidify.</p>
 				<p class="lead">Now anyone could create their own real time slideshow based in Instagram #hashtags for their event.</p>
 			</div>
 
